# github-app-installation-token

./: Cargo.toml  README.md  flake.nix
.github/workflows/: release.yml
src/: main.rs
tests/fixtures/: test-rsa.pem
